--- a/feature/preferences/src/main/res/values/strings.xml
+++ b/feature/preferences/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="preference_color_theme">Color Theme</string>
     <string name="preference_color_mode">Color Mode</string>
     <string name="sync_option_not">Not</string>
+    <string name="sync_preferences_return">Return to the settings screen</string>
 </resources>
