--- a/feature/preferences/src/main/res/values/strings.xml
+++ b/feature/preferences/src/main/res/values/strings.xml
@@ -33,4 +33,14 @@
     <string name="preference_open_sync">Configure synchronization</string>
     <string name="sync_category_auto">Auto synchronization</string>
     <string name="sync_preferences_screen_title">Synchronization settings</string>
+    <string name="sync_preferences_syncing">Currently synchronizing…</string>
+    <string name="sync_preferences_syncing_date_prefix">Started at:</string>
+    <string name="sync_preferences_recent_sync_headline">Last synchronization</string>
+    <string name="sync_preferences_recent_sync_info">Synchronized last at %s, took %s</string>
+    <string name="sync_preferences_sync_now">Synchronize now</string>
+    <string name="sync_preferences_recent_sync_fail">Synchronization failed</string>
+    <string name="sync_preferences_recent_sync_failed_info">The recent synchronization started at %s failed. Your accound credentials could not be verified. Try to log in again.</string>
+    <string name="sync_preferences_relogin">Relogin now</string>
+    <string name="sync_preferences_recent_sync_more">More info</string>
+    <string name="sync_preferences_screen_title_syncing">Currently synchronizing…</string>
 </resources>
