add a new composable to display the daily progress of a user

--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="user_popup_profile">Profile</string>
     <string name="sort">Sort list</string>
     <string name="action_preferences">Go to the preferences screen</string>
+    <string name="progress_title">Progress today</string>
+    <string name="progress_numeric">Completed %s of %s</string>
 </resources>
