--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="action_preferences">Go to the preferences screen</string>
     <string name="progress_title">Progress today</string>
     <string name="progress_numeric">Completed %s of %s</string>
+    <string name="home_link_persons_title">Persons</string>
+    <string name="home_link_persons_summary">View or edit your persons and relation to reference in your dreams.</string>
 </resources>
